# codelite

./: .gitignore  README.md
CodeLite/: comment_parser.cpp  cpp_expr_lexer.cpp  cpp_lexer.cpp  file_logger.cpp  lex.yy.cpp
CodeLite/SocketAPI/: clSocketBase.h
Plugin/: ColoursAndFontsManager.cpp  ColoursAndFontsManager.h  clMenuBar.cpp  globals.cpp
sdk/codelite_indexer/network/: clindexerprotocol.cpp
wxcrafter/: CMakeLists.txt  events_table_list_view.cpp  gui.cpp  main.cpp  pch.h
wxcrafter/wxcLib/: clSocketBase.cpp  clSocketClient.cpp  clSocketClient.h  clSocketServer.cpp  clSocketServer.h  wxcConnector.cpp  wxcConnector.h  wxcNetworkCommand.h  wxcNetworkReply.h  wxcNetworkReplyThread.cpp  wxcNetworkReplyThread.h
