cmake_minimum_required(VERSION 3.20)

project(wxCrafter LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS OFF)

if (MSVC)
    # /O1 often results in faster code than /O2 due to CPU caching
    string(REPLACE "/O2" "/O1" cl_optimize ${CMAKE_CXX_FLAGS_RELEASE})
    set(CMAKE_CXX_FLAGS_RELEASE ${cl_optimize} CACHE STRING "C++ Release flags" FORCE)

    # Using /Z7 instead of /Zi to avoid blocking while parallel compilers write to the pdb file.
    # This can considerably speed up build times at the cost of larger object files.
    string(REPLACE "/Zi" "/Z7" z_seven ${CMAKE_CXX_FLAGS_DEBUG})
    set(CMAKE_CXX_FLAGS_DEBUG ${z_seven} CACHE STRING "C++ Debug flags" FORCE)
endif()

get_property(isMultiConfig GLOBAL
  PROPERTY GENERATOR_IS_MULTI_CONFIG
)

if (NOT isMultiConfig)
    message("\nBecause you are using a single target generator, you MUST specify")
    message("    a \"--config [Debug|Release]\" option with the cmake --build command\n")

    set(allowedBuildTypes Debug Release)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "${allowedBuildTypes}")

    if (NOT CMAKE_BUILD_TYPE)
        set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE)
    elseif (NOT CMAKE_BUILD_TYPE IN_LIST allowedBuildTypes)
        message(FATAL_ERROR "Unknown build type: ${CMAKE_BUILD_TYPE}")
    endif()
endif()

add_compile_definitions(
    UNICODE
    STANDALONE_BUILD=1
    CL_BUILD=1
    _CRT_SECURE_NO_WARNINGS
)

add_executable(wxCrafter WIN32
    AboutDlg.cpp
    ActivityrIndicatorWrapper.cpp
    AnimationCtrlWrapper.cpp
    AuiToolBarTopLevel.cpp
    AuiToolbarWrapperBase.cpp
    BitmapComboxWrapper.cpp
    BitmapSelectorDlg.cpp
    BitmapTextArrayProperty.cpp
    BmpTextSelectorDlg.cpp
    CaptionBar.cpp
    DefineCustomControlWizard.cpp
    DeleteCustomControlDlg.cpp
    EditCustomControlDlg.cpp
    EventsEditorDlg.cpp
    FontPickerDlg.cpp
    FreeTrialVersionDlg.cpp
    MediaCtrl.cpp
    MessageDlg.cpp
    MyComboBoxXmlHandler.cpp
    MyRearrangeListXmlHandler.cpp
    NewCustomEventDlg.cpp
    NewFormWizard.cpp
    OpenGLCanvas.cpp
    RearrangeListWrapper.cpp
    SimpleHtmlListBoxWrapper.cpp
    SingleBitmapAndTextDlg.cpp
    TimePickerCtrlWrapper.cpp
    ToolBoxPanel.cpp
    allocator_mgr.cpp
    aui_manager_wrapper.cpp
    aui_notebook_wrapper.cpp
    aui_pane_info.cpp
    aui_pane_info_list_view.cpp
    banner_window_wrapper.cpp
    bitmap_button_wrapper.cpp
    bitmap_picker_property.cpp
    bitmap_wrapepr.cpp
    bitmaptogglebuttonwrapper.cpp
    bool_property.cpp
    box_sizer_wrapper.cpp
    button_wrapper.cpp
    calendar_ctrl_wrapper.cpp
    category_property.cpp
    check_box_wrapper.cpp
    check_list_box_wrapper.cpp
    choice_book_wrapper.cpp
    choice_property.cpp
    choice_wrapper.cpp
    col_header_flags_property.cpp
    collapsible_pane_wrapper.cpp
    color_property.cpp
    colour_picker_wrapper.cpp
    combox_wrapper.cpp
    command_link_button_wrapper.cpp
    custom_control_wrapper.cpp
    custom_pg_properties.cpp
    data_view_list_ctrl_column.cpp
    data_view_list_ctrl_wrapper.cpp
    data_view_tree_ctrl_wrapper.cpp
    data_view_tree_list_ctrl_wrapper.cpp
    date_picker_ctrl.cpp
    designer_container_panel.cpp
    designer_panel.cpp
    dialog_wrapper.cpp
    dir_picker_ctrl_wrapper.cpp
    duplicateTLWdlg.cpp
    enter_strings_dlg.cpp
    events_database.cpp
    events_table_list_view.cpp
    file_ficker_property.cpp
    file_picker_ctrl.cpp
    file_picker_ctrl_wrapper.cpp
    flexgridsizer_wrapper.cpp
    font_picker_ctrl_wrapper.cpp
    font_property.cpp
    frame_wrapper.cpp
    functions_parser.cpp
    gauge_wrapper.cpp
    generic_dir_ctrl_wrapper.cpp
    gl_canvas_wrapper.cpp
    grid_bag_sizer_wrapper.cpp
    grid_column_wrapper.cpp
    grid_row_wrapper.cpp
    grid_sizer_wrapper.cpp
    grid_wrapper.cpp
    gui.cpp
    gui_wxcrafter_bitmaps.cpp
    html_window_wrapper.cpp
    hyper_link_ctrl_wrapper.cpp
    image_list_wrapper.cpp
    import_dlg.cpp
    import_from_wxFB.cpp
    import_from_wxSmith.cpp
    import_from_xrc.cpp
    info_bar_button_wrapper.cpp
    info_bar_wrapper.cpp
    int_property.cpp
    list_book_wrapper.cpp
    list_box_wrapper.cpp
    list_ctrl_column_wrapper.cpp
    list_ctrl_wrapper.cpp
    main.cpp
    media_ctrl_wrapper.cpp
    menu_bar.cpp
    menu_bar_wrapper.cpp
    menu_item_wrapper.cpp
    menu_wrapper.cpp
    multi_string_ctrl.cpp
    multi_strings_property.cpp
    my_dialog.cpp
    my_frame.cpp
    my_panel.cpp
    my_tree_ctrl.cpp
    myxh_auibook.cpp
    myxh_auimgr.cpp
    myxh_auitoolb.cpp
    myxh_cmdlinkbtn.cpp
    myxh_dataview.cpp
    myxh_dlg.cpp
    myxh_dvlistctrl.cpp
    myxh_dvtreectrl.cpp
    myxh_frame.cpp
    myxh_glcanvas.cpp
    myxh_grid.cpp
    myxh_infobar.cpp
    myxh_listc.cpp
    myxh_mediactrl.cpp
    myxh_panel.cpp
    myxh_propgrid.cpp
    myxh_ribbon.cpp
    myxh_richtext.cpp
    myxh_searchctrl.cpp
    myxh_simplebook.cpp
    myxh_stc.cpp
    myxh_textctrl.cpp
    myxh_toolbk.cpp
    myxh_treebk.cpp
    myxh_treelist.cpp
    myxh_webview.cpp
    notebook_base_wrapper.cpp
    notebook_page_wrapper.cpp
    notebook_wrapper.cpp
    output_nbook.cpp
    panel_wrapper.cpp
    panel_wrapper_top_level.cpp
    popup_window_preview.cpp
    popup_window_wrapper.cpp
    preview_dialog.cpp
    preview_frame.cpp
    preview_panel.cpp
    preview_wizard.cpp
    properties_list_view.cpp
    properties_sheet.cpp
    property_base.cpp
    property_grid_manager_wrapper.cpp
    property_grid_wrapper.cpp
    radio_box_wrapper.cpp
    radio_button_wrapper.cpp
    ribbon_bar_wrapper.cpp
    ribbon_button.cpp
    ribbon_button_bar_wrapper.cpp
    ribbon_gallery_item_wrapper.cpp
    ribbon_gallery_wrapper.cpp
    ribbon_page_wrapper.cpp
    ribbon_panel_wrapper.cpp
    ribbon_tool_bar_wrapper.cpp
    ribbon_tool_separator.cpp
    rich_text_ctrl_wrapper.cpp
    scroll_bar_wrapper.cpp
    scrolled_window_wrapper.cpp
    search_ctrl_wrapper.cpp
    serial_number.cpp
    simple_book_wrapper.cpp
    sizer_flags_list_view.cpp
    sizer_wrapper_base.cpp
    slider_wrapper.cpp
    spacer_wrapper.cpp
    spin_button_wrapper.cpp
    spin_ctrl_wrapper.cpp
    spin_wrapper_base.cpp
    splitter_window_page.cpp
    splitter_window_wrapper.cpp
    static_bitmap_wrapper.cpp
    static_box_sizer_wrapper.cpp
    static_line_wrapper.cpp
    static_text_wrapper.cpp
    status_bar_wrapper.cpp
    std_button_wrapper.cpp
    std_dialog_button_sizer_wrapper.cpp
    string_property.cpp
    styled_text_ctrl_wrapper.cpp
    styles_sheet_list_view.cpp
    task_bar_icon_wrapper.cpp
    text_ctrl_wrapper.cpp
    text_editor.cpp
    timer_wrapper.cpp
    toggle_button_wrapper.cpp
    tool_bar.cpp
    tool_bar_item_wrapper.cpp
    tool_book_wrapper.cpp
    toolbar_base_wrapper.cpp
    top_level_win_wrapper.cpp
    tree_book_wrapper.cpp
    tree_ctrl_wrapper.cpp
    tree_list_ctrl_column_wrapper.cpp
    tree_list_ctrl_wrapper.cpp
    virtual_folder_picker_ctrl.cpp
    virtual_folder_property.cpp
    web_view_wrapper.cpp
    winid_property.cpp
    wizard_page_wrapper.cpp
    wizard_wrapper.cpp
    wx_collapsible_pane_pane_wrapper.cpp
    wxcEvent.cpp
    wxcNetworkManager.cpp
    wxcNetworkThread.cpp
    wxcSettingsDlg.cpp
    wxcTreeView.cpp
    wxc_aui_manager.cpp
    wxc_aui_tool_stickiness.cpp
    wxc_bitmap_code_generator.cpp
    wxc_edit_manager.cpp
    wxc_notebook_code_helper.cpp
    wxc_project_metadata.cpp
    wxc_settings.cpp
    wxc_widget.cpp
    wxcrafter.cpp
    wxcrafter_gui.cpp
    wxcrafter_gui_wxcrafter_bitmaps.cpp
    wxcrafter_plugin.cpp
    wxcrafter_wxcrafter_bitmaps.cpp
    wxcversion.cpp
    wxgui_bitmaploader.cpp
    wxgui_defs.cpp
    wxgui_globals.cpp
    wxgui_helpers.cpp
    wxguicraft_main_view.cpp
    wxrc.cpp
    xy_pair.cpp

    wxcLib/cJSON.cpp
    # wxcLib/clSocketBase.cpp
    wxcLib/clSocketClient.cpp
    # wxcLib/clSocketServer.cpp
    wxcLib/json_node.cpp
    wxcLib/wxcConnector.cpp
    wxcLib/wxcNetworkCommand.cpp
    wxcLib/wxcNetworkReply.cpp
    wxcLib/wxcNetworkReplyThread.cpp
    wxcLib/wxcReplyEventData.cpp

)

add_library(CodeLite STATIC

    ${CMAKE_SOURCE_DIR}/../CodeLite/CodeLiteIndexer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CodeLiteIndexer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CompletionHelper.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxLexer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxLexerAPI.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxPreProcessor.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxPreProcessorExpression.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxPreProcessorScanner.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxTemplateFunction.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxTokenizer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxVariable.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/CxxVariableScanner.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/StringUtils.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/archive.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/asyncprocess.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clBitmap.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clConsoleBase.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clConsoleBash.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clConsoleCMD.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clConsoleCodeLiteTerminal.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clConsoleGnomeTerminal.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clDebuggerBreakpoint.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clFileSystemEvent.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clFilesCollector.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clFontHelper.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clGotoEntry.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clSFTPEvent.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clTempFile.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/clWorkspaceEvent.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cl_calltip.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cl_command_event.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cl_config.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cl_standard_paths.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/codelite_events.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/comment.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/comment_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/compiler_command_line_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_comment_creator.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_expr_lexer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_expr_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_func_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_lexer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpp_scanner.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cpptoken.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/cppwordscanner.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/ctags_manager.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/ctags_manager.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/dirtraverser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/entry.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/event_notifier.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/expression_result.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/file_logger.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/fileentry.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/fileextmanager.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/fileutils.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/function.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/json.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/language.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/lex.yy.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/parsedtoken.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/pptable.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/processreaderthread.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/procutils.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/scope_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/ssh_account_info.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/stringaccessor.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/tag_tree.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/tags_options_data.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/tags_storage_sqlite3.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/tokenizer.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/typedef_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/var_parser.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/variable.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/winprocess.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/winprocess_impl.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/xor_string.cpp

    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network/cl_indexer_reply.cpp
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network/cl_indexer_request.cpp
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network/clindexerprotocol.cpp
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network/named_pipe.cpp
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network/named_pipe_client.cpp

    ${CMAKE_SOURCE_DIR}/../CodeLite/SocketAPI/clSocketServer.cpp
    # ${CMAKE_SOURCE_DIR}/../CodeLite/SocketAPI/clSocketClient.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/SocketAPI/clSocketBase.cpp
    ${CMAKE_SOURCE_DIR}/../CodeLite/SocketAPI/clConnectionString.cpp
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/src/wxsqlite3.cpp
)

add_library(Plugin STATIC

    # ${CMAKE_SOURCE_DIR}/../Plugin/sftp_ui_sftp_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/AddIncludeFile_liteeditor_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/AddSSHAcountDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/BorlandCppBuilderImporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/BuildTargetDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/BuilderGnuMakeMSYS.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CodeBlocksImporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ColoursAndFontsManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompileCommandsGenerator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompileCommandsJSON.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompileFlagsTxt.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorCLANG.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorCrossGCC.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorCygwin.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorEosCDT.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorGCC.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorMSVC.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorMSYS2.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorMinGW.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilerLocatorRustc.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/CompilersDetectorManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DebuggerToolBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DevCppImporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffConfig.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffFoldersFrame.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffSelectFoldersDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffSideBySidePanel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffUI.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/DiffUI_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/EditDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/EnvVarImporterDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/EnvironmentVariablesDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/EnvironmentVariablesDlgBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/EnvironmentVariablesDlgBaseBitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/FSConfigPage.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/GCCMetadata.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/GTKNotebook.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/GotoAnythingBaseUI.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/GotoAnythingBaseUI_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/GotoAnythingDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ICompilerLocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/LSPNetwork.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/LSPNetworkSTDIO.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/LSPNetworkSocketClient.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/LSPStartupInfo.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/LanguageServerProtocol.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/MacrosBaseDlg_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/Markup.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewFileSystemWorkspaceDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewKeyShortcutBaseDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewKeyShortcutBaseDlg_liteeditor_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewProjectDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewProjectDialogBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NewProjectDialogBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NodeJSLocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/Notebook.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/NotebookNavigationDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SFTPBrowserDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SFTPSessionInfo.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SSHAccountManagerDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SwitchToWorkspaceBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SwitchToWorkspaceBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/SwitchToWorkspaceDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterASM.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterBatch.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterCMake.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterCSS.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterCXX.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterCobra.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterCobraAlt.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterDiff.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterDockerfile.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterFortran.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterINI.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterInnoSetup.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterJSON.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterJava.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterJavaScript.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterLUA.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterMakefile.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterPHP.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterPython.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterRuby.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterRust.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterSCSS.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterSQL.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterScript.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterText.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterXML.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ThemeImporterYAML.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ToolBarUI.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/ToolBar_liteeditor_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VirtualDirectoryColour.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VirtualDirectorySelectorBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VirtualDirectorySelectorBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VirtualDirectorySelectorDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VirtualDirectorySelector_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/VisualCppImporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/WSImporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/WSImporterDlgs.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/WSImporterDlgs_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/addincludefiledlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/addincludefiledlgbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/art_metro.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/async_executable_cmd.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/attribute_style.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/bitmap_loader.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/bookmark_manager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/build_config.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/build_config_common.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/build_settings_config.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/build_system.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/builder.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/builder_NMake.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/builder_gnumake.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/builder_gnumake_default.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/builder_gnumake_onestep.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/buildmanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cLToolBarControl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cProjectDependecySorter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cc_box_tip_window.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAboutDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAboutDialogBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAboutDialogBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAnsiEscapeCodeColourBuilder.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAnsiEscapeCodeHandler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clAuiCaptionEnabler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBacktickCache.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBitmapOverlayCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBoostrapWizardBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBoostrapWizardBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBoostrapWizardPage.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clBootstrapWizard.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clButton.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clButtonBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clCaptionBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clCellValue.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clChoice.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clCodeLiteRemoteProcess.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clColours.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clComboBox.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clControlWithItems.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clCustomScrollBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clCustomiseToolBarDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clDTL.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clDataViewListCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clDebuggerTerminal.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clDiffFrame.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clDockingManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEditorBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEditorColouriseLocker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEditorEditEventsHandler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEditorStateLocker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEditorWordCharsLocker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clEnhancedToolBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFSWNewConfigDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileCache.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileOrFolderDropTarget.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspace.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspaceConfig.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspaceDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspaceDlgBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspaceDlgBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileSystemWorkspaceView.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFileViwerTreeCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clFindResultsStyler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clGenericNotebook.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clGenericSTCStyler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clGetTextFromUserDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clGotoAnythingManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clHeaderBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clHeaderItem.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clImageViewer.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clInfoBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clKeyboardBindingConfig.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clKeyboardManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clMainFrameHelper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clMarkdownRenderer.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clMenuBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clMouseCaptureLocker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clNodeJS.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clNotebookTheme.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clPatch.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clPersistenceManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clPluginsFindBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clProfileHandler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clPythonLocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRegistery.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRemoteBuilder.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRemoteDirCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRemoteFindDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRemoteFinderHelper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clResizableTooltip.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clResizableTooltipBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clResizableTooltipBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRowEntry.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRustLocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clRustup.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSFTPManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSTCLineKeeper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clScrollBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clScrolledPanel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSelectSymbolDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSelectSymbolDialogBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSelectSymbolDialogBase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clShellHelper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSingleChoiceDialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSnippetManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clStatusBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clStatusBarMessage.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clStringHistory.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clSystemSettings.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabHistory.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabRenderer.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabRendererDefault.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabRendererFirefox.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabRendererGTK3.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabRendererMinimal.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTabTogglerHelper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTableLineEditorDlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTableWithPagination.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTerminalHistory.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTerminalViewCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemeUpdater.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedButton.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedChoice.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedComboBox.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedListCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedMenuBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedSTC.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedSplitterWindow.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clThemedTreeCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarButton.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarButtonBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarMenuButton.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarSeparator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarSpacer.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarStretchableSpace.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clToolBarToggleButton.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeCtrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeCtrlColourHelper.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeCtrlModel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeCtrlPanel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeCtrlPanelDefaultPage.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeKeyboardInput.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clTreeNodeVisitor.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clWorkspaceManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clWorkspaceView.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clZipReader.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clZipWriter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_aui_dock_art.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_aui_tb_are.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_aui_tool_stickness.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_editor_tip_window.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_registry.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/cl_treelistctrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/clean_request.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/compilation_database.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/compile_request.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/compiler.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/conffilelocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/configtool.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/configuration_mapping.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/configurationtoolbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/console_frame.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/consolefinder.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/custombuildrequest.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/debuggerconfigtool.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/debuggermanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/debuggersettings.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/detachedpanesinfo.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/dirpicker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/dockablepane.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/dockablepanemenumanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/drawingutils.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/dynamiclibrary.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/editor_config.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/environmentconfig.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/evnvarlist.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/exelocator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/filepicker.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/globals.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/job.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/jobqueue.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/lexer_configuration.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/listctrl_improved.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/localworkspace.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/macromanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/macrosbasedlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/macrosdlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/md5.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/mdparser.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/memoryview.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/memoryviewbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/memoryviewbase_liteeditor_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/nameanddescbasedlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/nameanddescdlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/nameanddescdlg_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/navigationmanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/newkeyshortcutdlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/notebook_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/open_resource_dialog.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/openresourcedialogbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/openresourcedialogbase_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/openresourcedialogmodel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/opentypevlistctrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/optionsconfig.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/overlaytool.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/phpoptions.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/pipedprocess.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/plugin_general_wxcp.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/plugin_general_wxcp_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/plugindata.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/progressctrl.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/project.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/project_settings.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/queuecommand.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/quickdebuginfo.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/quickfindbarbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/quickfindbarbase_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/regex_processor.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/renamefilebasedlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/renamefiledlg.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/sessionmanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/sftp_item_comparator.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/sftp_settings.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/sftp_ui.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/sftptreemodel.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/shell_command.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/stringsearcher.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/symbol_tree.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/tabicons.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/tagsmanagementconf.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/unredobase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/vcimporter.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/windowattrmanager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/windowstack.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/workspace.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxCodeCompletionBox.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxCodeCompletionBoxBase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxCodeCompletionBoxManager.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxCodeCompletionBox_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxCustomStatusBar.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxPNGAnimation.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wx_tree_traverser.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxcrafter_plugin.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxcrafter_plugin_bitmaps.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxmd5.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxterminal.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/wxterminalbase.cpp
    ${CMAKE_SOURCE_DIR}/../Plugin/xmlutils.cpp

)

add_library(sqlite3 STATIC
    ${CMAKE_SOURCE_DIR}/../sqlite3/sqlite3.c
)

if (MSVC)
    # /GL -- combined with the Linker flag /LTCG to perform whole program optimization in Release build
    # /FC -- Full path to source code file in diagnostics
    target_compile_options(wxCrafter PRIVATE "$<$<CONFIG:Release>:/GL>" "/FC" "/W3" "/Zc:__cplusplus" "/utf-8")
    target_link_options(wxCrafter PRIVATE "$<$<CONFIG:Release>:/LTCG>")

endif()

if (WIN32)
    target_link_libraries(wxCrafter PRIVATE Plugin CodeLite sqlite3 wxWidgets wxCLib comctl32 Imm32 Shlwapi Version UxTheme Uuid Rpcrt4 Ws2_32)
else()
    target_link_libraries(wxCrafter PRIVATE Plugin CodeLite sqlite3 wxWidgets wxCLib)
endif()

target_precompile_headers(wxCrafter PRIVATE "pch.h")
target_precompile_headers(CodeLite PRIVATE "pch.h")
target_precompile_headers(Plugin PRIVATE "pch.h")

target_include_directories(wxCrafter PRIVATE
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/win
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/include
    ${CMAKE_SOURCE_DIR}/../Plugin
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/include
    ${CMAKE_SOURCE_DIR}/../CodeLite
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/sqlite3/include
    ${CMAKE_SOURCE_DIR}/../Interfaces

    ${CMAKE_SOURCE_DIR}/wxcLib
)

target_include_directories(CodeLite PRIVATE
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/win
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/include
    ${CMAKE_SOURCE_DIR}/../Plugin
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/include
    ${CMAKE_SOURCE_DIR}/../CodeLite
    ${CMAKE_SOURCE_DIR}/../sdk/codelite_indexer/network
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/sqlite3/include
    ${CMAKE_SOURCE_DIR}/../Interfaces
)

target_include_directories(Plugin PRIVATE
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/win
    ${CMAKE_SOURCE_DIR}/../wxSnapshot/include
    ${CMAKE_SOURCE_DIR}/../Plugin
    ${CMAKE_SOURCE_DIR}/../sdk/wxsqlite3/include
    ${CMAKE_SOURCE_DIR}/../CodeLite
    ${CMAKE_SOURCE_DIR}/../Interfaces

    ${CMAKE_SOURCE_DIR}/wxcLib
)

# Note that we are linking to a different repositiory, and the libraries must be built within
# that repository. There is no mechanism in this cmake file to build them.
target_link_directories(wxCrafter PRIVATE
    $<$<CONFIG:Debug>:${CMAKE_CURRENT_LIST_DIR}/../wxSnapshot/build/Debug>
    $<$<CONFIG:Release>:${CMAKE_CURRENT_LIST_DIR}/../wxSnapshot/build/Release>
)
